Add JWT authentication and user management features. Introduce AuthController for user login, registration, and management endpoints. Implement AuthService for user operations and JWT handling. Enhance SecurityConfig for JWT filter integration and update CORS settings. Add necessary DTOs, entity, and repository for user management. Include initial data loader for default users.